Update backend for deployment

--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@ DEBUG=True
 ENVIRONMENT=development
 
 # CORS Configuration
-ALLOWED_ORIGINS=http://localhost:3000,http://localhost:3001,http://127.0.0.1:3000,https://nulo-africa.vercel.app"
+ALLOWED_ORIGINS=http://localhost:3000,http://localhost:3001,http://127.0.0.1:3000,https://nulo-africa.vercel.app
 
 # Paystack Configuration (Optional)
 PAYSTACK_SECRET_KEY=sk_test_your_paystack_secret_key
